# serde

./: Cargo.toml  README.md
src/: de.rs  errors.rs  lib.rs  macros.rs  ser.rs
